--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,10 +22,10 @@ body {
 
 .card {
     width: 377px;
-    height: 518px;
+    height: 575px;
     background-color: #242424;
     border-radius: 10px;
-    padding: 24px 24px 0 24px;
+    padding: 34px;
 }
 
 .avatar {
@@ -66,7 +66,7 @@ h1 {
 
 button {
     width: 100%;
-    height: 39px;
+    height: 42px;
     background-color: #363636;
     border: none;
     border-radius: 10px;
