--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,7 +22,7 @@ body {
 
 .card {
     width: 377px;
-    height: 585px;
+    height: 595px;
     background-color: #242424;
     border-radius: 10px;
     padding: 34px;
@@ -62,6 +62,7 @@ h1 {
     margin: 0;
     margin-top: 24px;
     text-align: center;
+    margin-bottom: 18px;
 }
 
 button {
